# CourseWork_datastructure2025_text1_grade

./: .gitignore  CMakeLists.txt  README.md  build.sh  grade_gui.pro  main.cpp  test.csv
src/: datastructures.h  main_gui.cpp  mainwindow.cpp  mainwindow.h  printmanager.h
